--- a/wwwroot/package.json
+++ b/wwwroot/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "htmx.org": "^1.9.12",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
     "eslint": "^9.22.0"
