--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "System.Net.Http.HttpClient": "Warning",
+      "System.Net.Http.HttpClient.MangaDexClient": "Warning",
+      "System.Net.Http.HttpClient.MangaDexClient.LogicalHandler": "Warning",
+      "System.Net.Http.HttpClient.MangaDexClient.ClientHandler": "Warning"
     }
   },
   "Authentication": {
