--- a/MangaReader_ManagerUI/MangaReader_ManagerUI.Server/appsettings.json
+++ b/MangaReader_ManagerUI/MangaReader_ManagerUI.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MangaReaderApiSettings": {
-    "BaseUrl": "http://localhost:5000"
-  }
+    "MangaReaderApiSettings": {
+        "BaseUrl": "https://localhost:7262"
+    }
 }
