--- a/MangaReader_WebUI/MangaReader.WebUI.csproj
+++ b/MangaReader_WebUI/MangaReader.WebUI.csproj
@@ -28,5 +28,8 @@
   <ItemGroup>
     <Folder Include="Models\ViewModels\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MangaReaderLib\MangaReaderLib.csproj" />
+  </ItemGroup>
 
 </Project>
