--- a/MangaReader_WebUI/appsettings.Development.json
+++ b/MangaReader_WebUI/appsettings.Development.json
@@ -11,5 +11,9 @@
   },
   "BackendApi": {
     "BaseUrl": "https://manga-reader-app-backend.onrender.com/api"
+  },
+  "MangaReaderApiSettings": {
+    "BaseUrl": "https://localhost:7262",
+    "CloudinaryBaseUrl": "https://res.cloudinary.com/dew5tpdko/image/upload/"
   }
 }
