--- a/MangaReader_WebUI/appsettings.json
+++ b/MangaReader_WebUI/appsettings.json
@@ -1,15 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "System.Net.Http.HttpClient": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient.LogicalHandler": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient.ClientHandler": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "System.Net.Http.HttpClient": "Warning",
+            "System.Net.Http.HttpClient.MangaDexClient": "Warning",
+            "System.Net.Http.HttpClient.MangaDexClient.LogicalHandler": "Warning",
+            "System.Net.Http.HttpClient.MangaDexClient.ClientHandler": "Warning"
+        }
+    },
+    "BackendApi": {
+        "BaseUrl": "https://manga-reader-app-backend.onrender.com/api"
+    },
+    "MangaReaderApiSettings": {
+        "BaseUrl": "https://localhost:7262",
+        "CloudinaryBaseUrl": "https://res.cloudinary.com/dew5tpdko/image/upload/"
     }
-  },
-  "BackendApi": {
-    "BaseUrl": "https://manga-reader-app-backend.onrender.com/api"
-  }
 }
