--- a/MangaReader_ManagerUI/mangareader_managerui.client/package.json
+++ b/MangaReader_ManagerUI/mangareader_managerui.client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0",
     "zod": "^3.25.30",
     "zustand": "^5.0.5"
   },
