--- a/MangaReader_WebUI/appsettings.Development.json
+++ b/MangaReader_WebUI/appsettings.Development.json
@@ -2,11 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "System.Net.Http.HttpClient": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient.LogicalHandler": "Warning",
-      "System.Net.Http.HttpClient.MangaDexClient.ClientHandler": "Warning"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "BackendApi": {
